<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_contact_ros2_control</name>
  <version>0.1.0</version>
  <description>This package provides a ros2 control hardware interface for Gazebo that extend the gazebo_ros2_control package to provides collision sensors from the simulation</description>
  <maintainer email="manuel.yguel@gmail.com">Manuel YGUEL</maintainer>


  <license>BSD</license>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend version_eq="0.4.6">gazebo_ros2_controller</build_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>